@@ -1,0 +1,77 @@
+begin_unit|revision:1.0.0;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/*****************************************************************  *   Licensed to the Apache Software Foundation (ASF) under one  *  or more contributor license agreements.  See the NOTICE file  *  distributed with this work for additional information  *  regarding copyright ownership.  The ASF licenses this file  *  to you under the Apache License, Version 2.0 (the  *  "License"); you may not use this file except in compliance  *  with the License.  You may obtain a copy of the License at  *  *    http://www.apache.org/licenses/LICENSE-2.0  *  *  Unless required by applicable law or agreed to in writing,  *  software distributed under the License is distributed on an  *  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY  *  KIND, either express or implied.  See the License for the  *  specific language governing permissions and limitations  *  under the License.  ****************************************************************/
+end_comment
+
+begin_package
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|template
+operator|.
+name|parser
+package|;
+end_package
+
+begin_comment
+comment|/**  * @since 4.1  */
+end_comment
+
+begin_class
+specifier|public
+specifier|abstract
+class|class
+name|IdentifierNode
+extends|extends
+name|SimpleNode
+block|{
+specifier|private
+name|String
+name|identifier
+decl_stmt|;
+specifier|public
+name|IdentifierNode
+parameter_list|(
+name|int
+name|i
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|i
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|setIdentifier
+parameter_list|(
+name|String
+name|identifier
+parameter_list|)
+block|{
+name|this
+operator|.
+name|identifier
+operator|=
+name|identifier
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getIdentifier
+parameter_list|()
+block|{
+return|return
+name|identifier
+return|;
+block|}
+block|}
+end_class
+
+end_unit
+
